// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LibraryEntryViewForm rendering tests categories empty - rendered test 1`] = `
<div>
  <div
    data-testid="template-view-form"
  >
    <div
      class="mb-8"
    >
      <h1
        class="mb-2 text-3xl font-bold text-slate-900"
      >
        title 1
      </h1>
      <p
        class="text-sm text-slate-500"
      >
        Erstellt 
        27. September 2025
         · 
        model 1
      </p>
    </div>
    <div
      class="mb-8"
      data-testid="short-description"
    >
      <div
        class="mb-3 border-t border-slate-200 pt-4"
      >
        <span
          class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
        >
          Beschreibung
        </span>
      </div>
      <div
        class="text-slate-700 leading-relaxed"
        data-testid="react-md"
      >
        <div
          data-testid="react-markdown-mock"
        >
          description 1
        </div>
      </div>
    </div>
    <div
      class="border-t border-slate-200 pt-4"
    >
      <div
        data-testid="prompt-text"
      >
        <div
          class="mb-3 flex items-center justify-between"
        >
          <span
            class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
          >
            Prompt-Text
          </span>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-8 px-3 hover:bg-slate-200"
            data-slot="button"
            data-testid="copy-btn"
            title="In Zwischenablage kopieren"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-copy mr-2 h-4 w-4 text-slate-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="text-sm text-slate-600"
            >
              Kopieren
            </span>
          </button>
        </div>
        <div
          class="rounded-lg bg-slate-100 p-5"
        >
          <div
            class="font-mono text-sm leading-relaxed text-slate-900"
            data-testid="react-md"
          >
            <div
              data-testid="react-markdown-mock"
            >
              content 1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LibraryEntryViewForm rendering tests with categories - rendered test 1`] = `
<div>
  <div
    data-testid="template-view-form"
  >
    <div
      class="mb-8"
    >
      <div
        class="mb-3 flex flex-wrap gap-2"
        data-testid="categories"
      >
        <span
          class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
        >
          category 0
        </span>
        <span
          class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
        >
          category 1
        </span>
        <span
          class="rounded-full border border-blue-200 bg-blue-50 px-2.5 py-0.5 text-xs font-medium text-blue-600"
        >
          category 2
        </span>
      </div>
      <h1
        class="mb-2 text-3xl font-bold text-slate-900"
      >
        title 1
      </h1>
      <p
        class="text-sm text-slate-500"
      >
        Erstellt 
        27. September 2025
         · 
        model 1
      </p>
    </div>
    <div
      class="mb-8"
      data-testid="short-description"
    >
      <div
        class="mb-3 border-t border-slate-200 pt-4"
      >
        <span
          class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
        >
          Beschreibung
        </span>
      </div>
      <div
        class="text-slate-700 leading-relaxed"
        data-testid="react-md"
      >
        <div
          data-testid="react-markdown-mock"
        >
          description 1
        </div>
      </div>
    </div>
    <div
      class="border-t border-slate-200 pt-4"
    >
      <div
        data-testid="prompt-text"
      >
        <div
          class="mb-3 flex items-center justify-between"
        >
          <span
            class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
          >
            Prompt-Text
          </span>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-8 px-3 hover:bg-slate-200"
            data-slot="button"
            data-testid="copy-btn"
            title="In Zwischenablage kopieren"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-copy mr-2 h-4 w-4 text-slate-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="text-sm text-slate-600"
            >
              Kopieren
            </span>
          </button>
        </div>
        <div
          class="rounded-lg bg-slate-100 p-5"
        >
          <div
            class="font-mono text-sm leading-relaxed text-slate-900"
            data-testid="react-md"
          >
            <div
              data-testid="react-markdown-mock"
            >
              content 1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
